--- a/onetest.conf
+++ b/onetest.conf
@@ -64,7 +64,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 京东宠汪汪 = type=cron,cronexpr="15 0-23/2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy.js,enable=true
 京东宠汪汪喂食 = type=cron,cronexpr="15 0-23/1 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_feedPets.js,enable=true
 宠汪汪强制为别人助力= type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com\/\/common\/pet\/enterRoom\/h5\?invitePin=.*(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?&reqSource=weapp|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin,requires-body=1,max-size=0,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_help.js
-宠汪汪积分兑换奖品 = type=cron,cronexpr="0 0-16/8 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js
+宠汪汪积分兑换奖品 = type=cron,cronexpr="0 0-16/8 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js,enable=true
 宠汪汪邀请助力与赛跑助力 = type=cron,cronexpr="15 10 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js,enable=true
 宠汪汪助力更新Token = type=http-response,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code=, requires-body=1, max-size=0, script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
 宠汪汪助力获取Token = type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId=, max-size=0, script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
@@ -78,7 +78,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 东东萌宠 = type=cron,cronexpr="15 6-18/6 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js,enable=true
 京东金融养猪猪 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js,enable=true
 京东种豆得豆 = type=cron,cronexpr="1 7-21/2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js,enable=true
-京东保价 = type=cron,cronexpr="0 2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_price.js,enable=true
+京东保价 = type=cron,cronexpr="0 2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_price.js,enable=false
 京东全民开红包 = type=cron,cronexpr=1 1 * * *,timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_redPacket.js,enable=true
 闪购盲盒 = type=cron,cronexpr="20 8 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_sgmh.js,enable=true
 进店领豆 = type=cron,cronexpr="2 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js,enable=true
@@ -88,7 +88,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 京东极速版 = type=cron,cronexpr="0 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js,enable=false
 东东超市 = type=cron,cronexpr="13 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js,enable=true
 赚京豆 = type=cron,cronexpr="11 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js,enable=true
-取关京东店铺商品 = type=cron,cronexpr="55 23 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js,enable=true
+取关京东店铺商品 = type=cron,cronexpr="55 23 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js,enable=false
 小鸽有礼2 = type=cron,cronexpr="30 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xgyl.js,enable=true
 京喜签到 = type=cron,cronexpr="8 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js,enable=true
 微博 = type=http-response,requires-body=true,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -102,8 +102,8 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 神券京豆 = type=cron,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_super_coupon.js, cronexpr="19 0 * * *", timeout=200,enable=true
 爱奇艺获取Cookie = type=http-request,pattern=^https?:\/\/iface(\d)?\.iqiyi\.com\/,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 爱奇艺签到 = type=cron,cronexpr="0 10 * * *",timeout=120,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,enable=false
-Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://gitee.com/chavyleung/scripts/raw/master/bilibili/bilibili.cookie.js
-Bilibili签到 = type=cron,cronexpr="9 0 0 * * *",timeout=120,script-path=https://gitee.com/chavyleung/scripts/raw/master/bilibili/bilibili.js,enable=false
+Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
+Bilibili签到 = type=cron,cronexpr="9 0 0 * * *",timeout=120,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,enable=false
 盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=3600
 中国移动1CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin,script-path=https://gitee.com/chavyleung/scripts/raw/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 中国移动2CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee,script-path=https://gitee.com/chavyleung/scripts/raw/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
