--- a/onetest.conf
+++ b/onetest.conf
@@ -1,9 +1,9 @@
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
-bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
+tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 dns-server = system, 119.29.29.29, 223.5.5.5
-ipv6 = false
+ipv6 = true
 update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onetest.conf
 
 [Rule]
@@ -14,6 +14,7 @@ IP-CIDR,101.124.19.122/32,PROXY,no-resolve
 FINAL,PROXY
 
 [Host]
+localhost = 127.0.0.1
 *testflight.apple.com = server:8.8.4.4
 *.qq.com = server:119.28.28.28
 *.tencent.com = server:119.28.28.28
@@ -99,14 +100,13 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 京东抽奖机 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js,cronexpr="11 1 * * *",timeout=120,enable=true
 京东排行榜 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js,cronexpr="11 9 * * *",timeout=120,enable=true
 京东特权值 = type=cron,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js,cronexpr="5 8 * * *",timeout=120,enable=true
-神券京豆 = type=cron,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_super_coupon.js, cronexpr="19 0 * * *", timeout=200,enable=true
 爱奇艺获取Cookie = type=http-request,pattern=^https?:\/\/iface(\d)?\.iqiyi\.com\/,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 爱奇艺签到 = type=cron,cronexpr="0 10 * * *",timeout=120,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,enable=false
 Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
 Bilibili签到 = type=cron,cronexpr="9 0 0 * * *",timeout=120,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,enable=false
 盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=3600
-中国移动1CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin,script-path=https://gitee.com/chavyleung/scripts/raw/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
-中国移动2CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee,script-path=https://gitee.com/chavyleung/scripts/raw/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
+中国移动1CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
+中国移动2CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 10086-查话费 = type=cron,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js,cronexpr="30 0 * * *",enable=false
 
 [MITM]
