--- a/onetest.conf
+++ b/onetest.conf
@@ -59,7 +59,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 东东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js,enable=true
 获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_get_share_code.js,enable=true
 京东国际盲盒 = type=cron,cronexpr="0 9,12,20,21 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global_mh.js,enable=true
-环球挑战赛 = type=cron,cronexpr="0 9,12,20,21 2-22 2 *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js,enable=true
+环球挑战赛 = type=cron,cronexpr="0 9,12,20,21 2-22 2 *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js,enable=false
 东东工厂 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdfactory.js,enable=true
 京东赚赚 = type=cron,cronexpr="10 4 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdzz.js,enable=true
 京东宠汪汪 = type=cron,cronexpr="15 0-23/2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy.js,enable=true
