--- a/onetest.conf
+++ b/onetest.conf
@@ -51,6 +51,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 京东汽车 = type=cron,cronexpr="10 2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_car.js,enable=true
 京东汽车兑换 = type=cron,cronexpr="1 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_car_exchange.js,enable=true
 签到领现金 = type=cron,cronexpr="11 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cash.js,enable=true
+京喜财富岛 = type=cron,cronexpr="30 8,13,19 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js,enable=true
 摇京豆 = type=cron,cronexpr="5 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_club_lottery.js,enable=true
 crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js,enable=true
 监控crazyJoy分红 = type=cron,cronexpr="10 12 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js,enable=true
@@ -104,7 +105,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 爱奇艺签到 = type=cron,cronexpr="0 10 * * *",timeout=120,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,enable=false
 Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
 Bilibili签到 = type=cron,cronexpr="9 0 0 * * *",timeout=120,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,enable=false
-盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=3600
+盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=3600,enable=true
 中国移动1CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 中国移动2CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 10086-查话费 = type=cron,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js,cronexpr="30 0 * * *",enable=false
