--- a/onetest.conf
+++ b/onetest.conf
@@ -43,7 +43,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 #淘宝历史价格
 淘宝比价1 = type=http-request,requires-body=true,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 淘宝比价2 = type=http-response,requires-body=true,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-疯狂joy挂机 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js,cronexpr="7 1 * * *",timeout=36000, enable=false
+疯狂joy挂机 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js,cronexpr="7 4 * * *",timeout=36000, enable=false
 京豆变动通知 = type=cron,cronexpr="2 9 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_change.js,enable=true
 领京豆额外奖励 = type=cron,cronexpr="10 1 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_home.js,enable=true
 东东超市兑换奖品 = type=cron,cronexpr="0 0 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_blueCoin.js,enable=true
@@ -57,6 +57,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 监控crazyJoy分红 = type=cron,cronexpr="10 12 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js,enable=true
 天天提鹅 = type=cron,cronexpr="10 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_egg.js,enable=true
 京喜工厂 = type=cron,cronexpr="11 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_dreamFactory.js,enable=true
+她的节享京豆 = type=cron,cronexpr="0 8,21 1-8/1 3 *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_firecrackers.js,enable=true
 东东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js,enable=true
 获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_get_share_code.js,enable=true
 京东国际盲盒 = type=cron,cronexpr="0 9,12,20,21 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global_mh.js,enable=true
@@ -70,7 +71,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 宠汪汪邀请助力与赛跑助力 = type=cron,cronexpr="15 10 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js,enable=true
 宠汪汪助力更新Token = type=http-response,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code=, requires-body=1, max-size=0, script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
 宠汪汪助力获取Token = type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId=, max-size=0, script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
-宠汪汪偷好友积分与狗粮 = type=cron,cronexpr="10 0-21/3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js,enable=true
+宠汪汪偷好友积分与狗粮 = type=cron,cronexpr="10 0-21/3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js,enable=false
 京喜农场 = type=cron,cronexpr="0 9,12,18 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js,enable=true
 京东快递签到 = type=cron,cronexpr="10 5 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js,enable=true
 京东摇钱树 = type=cron,cronexpr="3 0-23/2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_moneyTree.js,enable=true
@@ -90,7 +91,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 京东极速版 = type=cron,cronexpr="0 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js,enable=false
 东东超市 = type=cron,cronexpr="13 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js,enable=true
 赚京豆 = type=cron,cronexpr="11 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js,enable=true
-取关京东店铺商品 = type=cron,cronexpr="55 23 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js,enable=false
+取关京东店铺商品 = type=cron,cronexpr="50 23 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js,enable=false
 小鸽有礼2 = type=cron,cronexpr="30 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xgyl.js,enable=true
 京喜签到 = type=cron,cronexpr="8 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js,enable=true
 微博 = type=http-response,requires-body=true,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
