--- a/onetest.conf
+++ b/onetest.conf
@@ -106,7 +106,8 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 爱奇艺签到 = type=cron,cronexpr="0 10 * * *",timeout=120,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,enable=false
 Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
 Bilibili签到 = type=cron,cronexpr="9 0 0 * * *",timeout=120,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,enable=false
-盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=3600,enable=true
+盒子 = type=http-request,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js,pattern=^https?://boxjs.net,max-size=131072,requires-body=true, timeout=120,enable=true
+盒子会话切换 = type=cron,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box.switcher.js,cronexpr="0 12 * * *",timeout=15,enable=true
 中国移动1CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 中国移动2CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 10086-查话费 = type=cron,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js,cronexpr="30 0 * * *",enable=false
